samples/_failures_safe/1761129322_c28997_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fa7a5d4.c: In function ‘main’:
./samples/SAFE/__tmp_0fa7a5d4.c:154:30: error: expected ‘)’ at end of input
  154 |     if (decompressed_len == 0
      |        ~                     ^
      |                              )
./samples/SAFE/__tmp_0fa7a5d4.c:154:5: error: expected declaration or statement at end of input
  154 |     if (decompressed_len == 0
      |     ^~
